# parseable

./: .deepsource.toml  .dockerignore  .gitignore  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.debug  Dockerfile.dev  Dockerfile.kafka  Dockerfile.release  Dockerfile.static  Dockerfile.ubi  Makefile  QUERY_OPTIMIZATIONS.md  README.md  TOKIO_CONSOLE_DEBUG.md  USERS.md  about.hbs  about.toml  build.rs  code_of_conduct.md  create_logstream.rs  demo_jemalloc_profiling.sh  docker-compose-distributed-test-with-kafka.yaml  docker-compose-distributed-test.yaml  docker-compose-gcs-distributed-test.yaml  docker-compose-load-test.yaml  docker-compose-local.yaml  docker-compose-test-with-kafka.yaml  docker-compose-test.yaml  docker-compose.yaml  helm-reindex.sh  index.md  index.yaml  license.html  openapi.yaml  (+6 more)
.github/: docker-compose-load.yaml  docker-compose-smoke.yaml  docker-compose-test.yaml  pull_request_template.md
benchmarks/: README.md
docs/: README.md  architecture.md  contributing.md  installation.md  introduction.md  log-ingestion.md  quick-start.md  syslog_ng_log_forwarding.md
helm/: Chart.yaml  README.md  values-aws.yaml  values-azure.yaml  values-gcp.yaml  values.yaml
helm-releases/: collector-0.0.1.tgz  index.yaml  operator-0.0.1.tgz  operator-0.0.2.tgz  operator-0.0.3.tgz  pai-0.1.0.tgz  pai-0.2.0.tgz  pai-0.3.0.tgz  parseable-0.0.1.tgz  parseable-0.0.2.tgz  parseable-0.0.5.tgz  parseable-0.0.6.tgz  parseable-0.0.7.tgz  parseable-0.0.8.tgz  parseable-0.1.0.tgz  parseable-0.1.1.tgz  parseable-0.2.0.tgz  parseable-0.2.1.tgz  parseable-0.2.2.tgz  parseable-0.3.0.tgz  parseable-0.3.1.tgz  parseable-0.4.0.tgz  parseable-0.4.1.tgz  parseable-0.4.2.tgz  parseable-0.4.3.tgz  parseable-0.4.4.tgz  parseable-0.4.5.tgz  parseable-0.5.0.tgz  parseable-0.5.1.tgz  parseable-0.6.0.tgz  parseable-0.6.1.tgz  parseable-0.6.2.tgz  parseable-0.7.0.tgz  parseable-0.7.1.tgz  parseable-0.7.2.tgz  parseable-0.7.3.tgz  parseable-0.8.0.tgz  parseable-0.8.1.tgz  parseable-0.9.0.tgz  parseable-0.9.tgz  (+60 more)
linux-systemd/: README.md  s3.md
query_cache/: .cache_meta.json
resources/: alerts_demo_data.sh  filters_demo_data.sh  formats.json  genai-pricing-example.json  ingest_demo_data.sh  parseable-genai-collector.yaml
server/: Cargo.toml  Config.toml  Configs.toml  build.rs
server/src/: about.rs  alerts.rs  analytics.rs  banner.rs  catalog.rs  cli.rs  config.rs  configs.rs  dynamic_query.rs  error.rs  event.rs  external_service.rs  file.rs  handler.rs  handlers.rs  hottier.rs  kafka.rs  livetail.rs  load_memstore.rs  localcache.rs  main.rs  mem_store.rs  metadata.rs  migration.rs  object.rs  oidc.rs  option.rs  panorama.rs  query.rs  querycache.rs  rbac.rs  response.rs  s3.rs  static_schema.rs  stats.rs  storage.rs  stream.rs  sync.rs  sync_s3.rs  utils.rs  (+1 more)
server/src/alerts/: mod.rs  parser.rs  rule.rs  target.rs
server/src/catalog/: column.rs  manifest.rs  snapshot.rs
server/src/error/: client.rs  mod.rs  server.rs
server/src/event/: format.rs  reader.rs  writer.rs
server/src/event/format/: json.rs  otel.rs
server/src/event/format/otel/: common.rs  log.rs  proto.rs  resource.rs  schema.rs  trace.rs
server/src/event/format/otel/proto/: common.rs  trace.rs
server/src/event/writer/: file_writer.rs  mem_writer.rs  mutable.rs
server/src/external_service/: panorama.rs
server/src/handlers/: airplane.rs  event.rs  http.rs  livetail.rs  logstream.rs  mod.rs  transport.rs
server/src/handlers/http/: about.rs  auth_middleware.rs  cache.rs  dynamic_query.rs  external.rs  health_check.rs  ingest.rs  kinesis.rs  llm.rs  logstream.rs  middleware.rs  oidc.rs  otel.rs  panorama.rs  proto.rs  query.rs  rbac.rs  role.rs  trino.rs
server/src/handlers/http/cluster/: mod.rs  utils.rs
server/src/handlers/http/modal/: coordinator_server.rs  ingest_server.rs  mod.rs  openapi.rs  query_server.rs  server.rs  ssl_acceptor.rs
server/src/handlers/http/modal/coordinator/: coordinator_cluster.rs  coordinator_dashboards.rs  coordinator_filters.rs  coordinator_llm.rs  coordinator_logstream.rs  coordinator_metrics.rs  coordinator_query.rs  coordinator_rbac.rs  coordinator_register.rs  coordinator_role.rs  mod.rs
server/src/handlers/http/modal/ingest/: ingester_ingest.rs  ingester_logstream.rs  ingester_rbac.rs  ingester_role.rs  ingestor_logstream.rs  ingestor_rbac.rs  ingestor_role.rs  mod.rs
server/src/handlers/http/modal/query/: mod.rs  querier_cluster.rs  querier_dashboards.rs  querier_filters.rs  querier_hottier.rs  querier_ingest.rs  querier_leader.rs  querier_logstream.rs  querier_query.rs  querier_rbac.rs  querier_role.rs
server/src/handlers/http/modal/utils/: ingest_utils.rs  logstream_utils.rs  mod.rs  rbac_utils.rs
server/src/handlers/http/otel/: common.rs  log.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.resource.v1.rs  proto.rs  resource.rs
server/src/handlers/http/otel/proto/collector/: README.md
server/src/handlers/http/server/: query_server.rs  ssl_acceptor.rs
server/src/handlers/http/users/: dashboards.rs  filters.rs  mod.rs
server/src/handlers/transport/http/: health_check.rs  ingest.rs  query.rs
server/src/metrics/: mod.rs  prom_utils.rs  storage.rs
server/src/migration/: metadata_migration.rs  schema_migration.rs  stream_metadata_migration.rs
server/src/modal/: ingest_server.rs  mod.rs  query_server.rs  server.rs  ssl_acceptor.rs
server/src/query/: filter_optimizer.rs  listing_table_builder.rs  stream_schema_provider.rs  table_provider.rs
server/src/rbac/: auth.rs  map.rs  role.rs  user.rs
server/src/storage/: azure_blob.rs  encryption.rs  file_link.rs  hot_tier.rs  localfs.rs  metrics_layer.rs  object_storage.rs  retention.rs  s3.rs  staging.rs  store_metadata.rs
server/src/users/: dashboards.rs  filters.rs  mod.rs
server/src/utils/: actix.rs  arrow.rs  batch_adapter.rs  header_parsing.rs  json.rs  uid.rs  update.rs
server/src/utils/arrow/: batch_adapter.rs  flight.rs  merged_reader.rs  reverse_reader.rs
server/src/utils/json/: flatten.rs
(+373 files in other folders)
