[package]
name = "parseable"
version = "2.5.12"
authors = ["Parseable Team <hi@parseable.com>"]
edition = "2024"
rust-version = "1.88.0"
categories = ["logs", "observability", "metrics", "traces"]
build = "build.rs"

[dependencies]
# Arrow and DataFusion ecosystem
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-flight = { version = "57.1.0", features = [
    "tls-aws-lc",
    "tls-native-roots",
] }
arrow-ipc = { version = "57.1.0", features = ["zstd"] }
arrow-json = "57.1.0"
arrow-schema = { version = "57.1.0", features = ["serde"] }
arrow-select = "57.1.0"
datafusion = "51.0.0"
object_store = { version = "0.12.4", features = [
    "cloud",
    "aws",
    "azure",
    "gcp",
] }
parquet = "57.1.0"

# Web server and HTTP-related
actix-cors = "0.7.0"
actix-web-lab = "0.24.3"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8"
actix-web-prometheus = { version = "0.1", default-features = false }
actix-web-static-files = "4.0"
http = "1.0"
http-auth-basic = "0.3.3"
tonic = { version = "0.14.1", features = [
    "tls-aws-lc",
    "tls-native-roots",
    "transport",
    "gzip",
    "zstd",
] }
tonic-prost = "0.14.1"
tonic-web = "0.14.1"
tower-http = { version = "0.6.1", features = ["cors"] }
url = "2.4.0"

# Connectors dependencies
rdkafka = { version = "0.37", optional = true, features = [
    "cmake-build",
    "tracing",
    "libz-static",
] }
sasl2-sys = { version = "0.1.22", optional = true, features = ["vendored"] }

# Authentication and Security
argon2 = "0.5.0"
base64 = "0.22.0"
cookie = "0.18.1"
hex = "0.4"
openid = { version = "0.18.3", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1.2"
sha2 = "0.10.8"

# Serialization and Data Formats
byteorder = "1.4.3"
erased-serde = "=0.3.16"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
serde_repr = "0.1.17"

# Async and Runtime
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "^1.43", default-features = false, features = [
    "sync",
    "macros",
    "fs",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = { version = "0.7" }

# # Logging and Metrics
# opentelemetry-proto = { version = "0.30.0", features = [
#     "gen-tonic",
#     "with-serde",
#     "logs",
#     "metrics",
#     "trace",
# ] }

# add custom branch with fix until it gets merged
opentelemetry-proto = { git = "https://github.com/parmesant/opentelemetry-rust/", rev = "45fb828769e6ade96d56ca1f5fa14cf0986a5341", features = [
    "gen-tonic",
    "with-serde",
    "logs",
    "metrics",
    "trace",
] }
prometheus = { version = "0.13.4", default-features = false, features = ["process"] }
prometheus-parse = "0.2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# Time and Date
chrono = "0.4"
chrono-humanize = "0.2"
humantime = "2.1.0"
humantime-serde = "1.1"

# File System and I/O
fs_extra = "1.3"
path-clean = "1.0.1"
relative-path = { version = "1.7", features = ["serde"] }

# CLI and System
clap = { version = "4.5", default-features = false, features = [
    "std",
    "color",
    "help",
    "derive",
    "env",
    "cargo",
    "error-context",
] }
crossterm = "0.28.1"
hostname = "0.4.0"
human-size = "0.4"
num_cpus = "1.15"
sysinfo = "0.33.1"
uptime_lib = "0.3.0"

# Utility Libraries
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.11"
clokwerk = "0.4"
derive_more = { version = "1", features = ["full"] }
itertools = "0.14"
once_cell = "1.20"
rayon = "1.8"
rand = "0.8.5"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "stream",
] }
semver = "1.0"
static-files = "0.2"
thiserror = "2.0"
ulid = { version = "1.0", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
futures-core = "0.3.31"
tempfile = "3.20.0"
lazy_static = "1.4.0"
prost = "0.13.1"
dashmap = "6.1.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[build-dependencies]
cargo_toml = "0.21"
sha1_smol = { version = "1.0", features = ["std"] }
static-files = "0.2"
ureq = "2.12"
url = "2.5"
vergen-gitcl = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }
zip = { version = "2.3", default-features = false, features = ["deflate"] }
anyhow = "1.0"

[dev-dependencies]
rstest = "0.23.0"
arrow = "57.1.0"
temp-dir = "0.1.14"

[package.metadata.parseable_ui]
assets-url = "https://parseable-prism-build.s3.us-east-2.amazonaws.com/v2.5.12/build.zip"
assets-sha1 = "2659b4bf86fe8d6b91ad60ea94729d5f7eb3c215"

[features]
debug = []
kafka = [
    "rdkafka",
    "rdkafka/ssl-vendored",
    "rdkafka/ssl",
    "rdkafka/sasl",
    "sasl2-sys",
    "sasl2-sys/vendored",
]

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
