[package]
name = "parseable"
version = "2.9.3"
authors = ["Parseable Team <hi@parseable.com>"]
edition = "2024"
rust-version = "1.91.0"
categories = ["logs", "observability", "metrics", "traces"]
build = "build.rs"

[dependencies]
# Arrow and DataFusion ecosystem
arrow = "58.0.0"
arrow-array = "58.0.0"
arrow-flight = { version = "58.0.0", features = [
    "tls-aws-lc",
    "tls-native-roots",
] }
arrow-ipc = { version = "58.0.0", features = ["zstd"] }
arrow-json = "58.0.0"
arrow-schema = { version = "58.0.0", features = ["serde"] }
arrow-select = "58.0.0"
datafusion = "53.0.0"
object_store = { version = "0.13.1", features = [
    "cloud",
    "aws",
    "azure",
    "gcp",
] }
parquet = "58.0.0"

# Web server and HTTP-related
actix-cors = "0.7.0"
actix-web-lab = "0.26.0"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8"
actix-web-prometheus = { version = "0.1", default-features = false }
actix-web-static-files = "4.0"
http = "1.0"
http-auth-basic = "0.3.3"
tonic = { version = "0.14.1", features = [
    "tls-aws-lc",
    "tls-native-roots",
    "transport",
    "gzip",
    "zstd",
] }
tonic-prost = "0.14.1"
tonic-web = "0.14.1"
tower-http = { version = "0.6.1", features = ["cors"] }
url = "2.4.0"

# Connectors dependencies
rdkafka = { version = "0.37", optional = true, features = [
    "cmake-build",
    "tracing",
    "libz-static",
] }
sasl2-sys = { version = "0.1.22", optional = true, features = ["vendored"] }

# Authentication and Security
argon2 = "0.5.0"
base64 = "0.22.0"
cookie = "0.18.1"
hex = "0.4"
openid = { version = "0.18.3", default-features = false, features = ["rustls"] }
rustls = { version = "0.23.40", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.1.2"
sha2 = "0.10.8"

# Serialization and Data Formats
byteorder = "1.5.0"
erased-serde = "=0.3.16"
serde = { version = "1.0.228", features = ["rc", "derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"

# Async and Runtime
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { version = "^1.52.3", default-features = false, features = [
    "sync",
    "macros",
    "fs",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tokio-util = { version = "0.7.18" }

# perf
hotpath = { version = "0.16.0", optional = true, features = [
    "hotpath",
    "hotpath-cpu",
    "hotpath-alloc",
    "tokio",
] }

# # Logging and Metrics
opentelemetry-proto = { version = "0.32.0", features = [
    "gen-tonic",
    "with-serde",
    "logs",
    "metrics",
    "trace",
] }
prometheus = { version = "0.13.4", default-features = false, features = [
    "process",
] }
prometheus-parse = "0.2.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "registry",
] }

# telemetry
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
] }
opentelemetry-stdout = "0.31.0"
tracing-actix-web = "0.7"

# Time and Date
chrono = "0.4"
chrono-humanize = "0.2"
humantime = "2.1.0"
humantime-serde = "1.1"

# File System and I/O
fs_extra = "1.3"
path-clean = "1.0.1"
relative-path = { version = "2.0.1", features = ["serde"] }

# CLI and System
clap = { version = "4.5", default-features = false, features = [
    "std",
    "color",
    "help",
    "derive",
    "env",
    "cargo",
    "error-context",
] }
crossterm = "0.29.0"
hostname = "0.4.0"
human-size = "0.4"
num_cpus = "1.15"
sysinfo = { version = "0.34.2", features = ["multithread"] }
uptime_lib = "0.3.0"

# Utility Libraries
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.11"
clokwerk = "0.4"
derive_more = { version = "1", features = ["full"] }
itertools = "0.15.0"
once_cell = "1.20"
rayon = "1.12.0"
rand = "0.8.5"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "stream",
] }
semver = "1.0"
static-files = "0.2"
thiserror = "2.0"
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rustc-hash = "2.1.2"
futures-core = "0.3.31"
tempfile = "3.20.0"
lazy_static = "1.4.0"
prost = "0.13.1"
dashmap = "6.2.1"
parking_lot = "0.12.5"
indexmap = { version = "2.14.0", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = [
    "profiling",
    "stats",
    "background_threads",
] }
tikv-jemalloc-ctl = { version = "0.7.0", features = ["stats"] }

[build-dependencies]
cargo_toml = "0.22.3"
sha1_smol = { version = "1.0", features = ["std"] }
static-files = "0.2"
ureq = "2.12"
url = "2.5"
vergen-gitcl = { version = "9.1.0", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
anyhow = "1.0"

[dev-dependencies]
rstest = "0.26.1"
arrow = "58.0.0"
temp-dir = "0.1.14"

[package.metadata.parseable_ui]
assets-url = "https://parseable-prism-build.s3.us-east-2.amazonaws.com/v2.9.3/build.zip"
assets-sha1 = "1f262e6aaf009185620a79b71ec7c1d04bc87a92"

[features]
debug = []
hotpath = [
    "dep:hotpath",
    "hotpath/hotpath",
    "hotpath/hotpath-cpu",
    "hotpath/hotpath-alloc",
    "hotpath/tokio",
]
hotpath-alloc = ["hotpath"]
hotpath-cpu = ["hotpath"]
kafka = [
    "rdkafka",
    "rdkafka/ssl-vendored",
    "rdkafka/ssl",
    "rdkafka/sasl",
    "sasl2-sys",
    "sasl2-sys/vendored",
]

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
