[package]
name = "parseable"
version = "0.4.2"
authors = ["Parseable Team <hi@parseable.io>"]
edition = "2021"
rust-version = "1.67"
categories = ["logging", "observability", "log analytics"]

[dependencies]
actix-web-httpauth = "0.8"
actix-web = { version = "4.3", features = ["rustls"] }
actix-cors = "0.6"
actix-web-prometheus = { version = "0.1" }
prometheus = { version = "0.13", features = ["process"] }
anyhow = { version = "1.0", features = ["backtrace"] }
arrow-schema = { version = "36.0.0", features = ["serde"] }
arrow-array = { version = "36.0.0" }
arrow-json = "36.0.0"
arrow-ipc = "36.0.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.4"
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.1", default-features = false, features = [
  "std",
  "color",
  "help",
  "derive",
  "env",
  "cargo",
  "error-context",
] }
crossterm = "0.26"
datafusion = "22.0.0"
object_store = { version = "0.5.6", features = ["aws", "aws_profile"] }
derive_more = "0.99"
env_logger = "0.10"
futures = "0.3"
fs_extra = "1.3"
http = "0.2"
humantime-serde = "1.1"
log = "0.4"
num_cpus = "1.15"
sysinfo = "0.28.4"
hostname = "0.3"
rand = "0.8"
relative-path = { version = "1.7", features = ["serde"] }
reqwest = { version = "0.11", default_features=false, features=["rustls", "json", "hyper-rustls", "tokio-rustls"]}
rustls = "0.20"
rustls-pemfile = "1.0"
semver = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
thiserror = "1"
thread-priority = "0.10"
tokio-stream = { version = "0.1", features = ["fs"] }
tokio = { version = "1.25", default-features = false, features = [
  "sync",
  "macros",
  "fs",
] }
clokwerk = "0.4"
actix-web-static-files = "4.0"
static-files = "0.2"
ulid = { version = "1.0", features = ["serde"] }
hex = "0.4"
itertools = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
xz2 = { version = "*", features=["static"] }
bzip2 = { version = "*", features=["static"] }
once_cell = "1.17.1"
parquet = "36.0.0"
pyroscope = { version = "0.5.3", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }
uptime_lib = "0.2.2"
regex = "1.7.3"

[build-dependencies]
static-files = "0.2"
cargo_toml = "0.15"
ureq = "2.6"
sha1_smol = { version = "1.0", features = ["std"] }
vergen = { version = "7.5", features = ["build", "git", "cargo"] }
zip = { version = "0.6", default_features = false, features = ["deflate"] }

[dev-dependencies]
maplit = "1.0"
rstest = "0.16"

[package.metadata.parseable_ui]
assets-url = "https://github.com/parseablehq/console/releases/download/v0.1.0/build.zip"
assets-sha1 = "badcc2edbc910cac21f2fcb57a338b58f17ff969"

[features]
debug = ["pyroscope", "pyroscope_pprofrs"]
