[package]
name = "parseable"
version = "0.7.0"
authors = ["Parseable Team <hi@parseable.io>"]
edition = "2021"
rust-version = "1.67"
categories = ["logging", "observability", "log analytics"]
build = "build.rs"

[dependencies]
### apache arrow/datafusion dependencies
arrow-schema = { version = "^42.0.0", features = ["serde"] }
arrow-array = { version = "^42.0.0" }
arrow-json = "^42.0.0"
arrow-ipc = "^42.0.0"
arrow-select = "^42.0.0"
datafusion = "^27.0.0"
object_store = { version = "^0.6.1", features = ["cloud", "aws"] }
parquet = "^42.0.0"

### actix dependencies
actix-web-httpauth = "0.8"
actix-web = { version = "4.3", features = ["rustls"] }
actix-cors = "0.6"
actix-web-prometheus = { version = "0.1" }
actix-web-static-files = "4.0"

### other dependencies
anyhow = { version = "1.0", features = ["backtrace"] }
argon2 = "0.5.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.4"
bzip2 = { version = "*", features = ["static"] }
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.1", default-features = false, features = [
  "std",
  "color",
  "help",
  "derive",
  "env",
  "cargo",
  "error-context",
] }
clokwerk = "0.4"
crossterm = "0.26"
derive_more = "0.99"
env_logger = "0.10"
fs_extra = "1.3"
futures = "0.3"
futures-util = "0.3.28"
hex = "0.4"
hostname = "0.3"
http = "0.2"
humantime-serde = "1.1"
itertools = "0.10"
log = "0.4"
num_cpus = "1.15"
once_cell = "1.17.1"
prometheus = { version = "0.13", features = ["process"] }
pyroscope = { version = "0.5.3", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }
rand = "0.8"
regex = "1.7.3"
relative-path = { version = "1.7", features = ["serde"] }
reqwest = { version = "0.11.18", default_features = false, features = [
  "rustls-tls",
  "json",
] }
rustls = "0.20"
rustls-pemfile = "1.0"
semver = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
static-files = "0.2"
sysinfo = "0.29.6"
thiserror = "1"
thread-priority = "0.13.1"
tokio = { version = "1.28", default-features = false, features = [
  "sync",
  "macros",
  "fs",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
ulid = { version = "1.0", features = ["serde"] }
uptime_lib = "0.2.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
xz2 = { version = "*", features = ["static"] }
nom = "7.1.3"
humantime = "2.1.0"
openid = { version = "0.12.0", default-features = false, features = ["rustls"] }
url = "2.4.0"

[build-dependencies]
cargo_toml = "0.15"
sha1_smol = { version = "1.0", features = ["std"] }
static-files = "0.2"
ureq = "2.6"
vergen = { version = "8.1", features = ["build", "git", "cargo", "gitcl"] }
zip = { version = "0.6", default_features = false, features = ["deflate"] }
url = "2.4.0"

[dev-dependencies]
maplit = "1.0"
rstest = "0.16"

[package.metadata.parseable_ui]
assets-url = "https://github.com/parseablehq/console/releases/download/v0.3.1/build.zip"
assets-sha1 = "6abd7b5ca5b9c832ff58b8450cffdc83dd7172bf"

[features]
debug = ["pyroscope", "pyroscope_pprofrs"]
